removed elastic, not needed (yet)

--- a/web-app/conf/application.conf
+++ b/web-app/conf/application.conf
@@ -16,5 +16,5 @@ neo4j.remote="embedded"
 neo4j.restDB.host="http://localhost:7474/db/data"
 neo4j.restDB.user="neo4j"
 neo4j.restDB.password="neo4j123"
-neo4j.serviceProviderClass= neo4j.services.Neo4jProvider
+neo4j.serviceProviderClass=neo4j.services.Neo4jProvider
 neo4j.mode=remote
